Optimized sample_contributions

--- a/src/fetch_data.ipynb
+++ b/src/fetch_data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,13 +21,14 @@
     "\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
+    "import numpy as np\n",
     "\n",
     "from config import DATA_DIR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -127,9 +128,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bk/0sfrfl4n3nl9319cdqyxqb740000gn/T/ipykernel_37523/1732914937.py:8: DtypeWarning: Columns (7,8,9,10,11,12,14,19,20,21,25,37) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  data = pd.read_csv(filepath)\n",
-      " 10%|█         | 1/10 [00:01<00:13,  1.55s/it]"
+      " 10%|█         | 1/10 [00:01<00:17,  1.97s/it]"
      ]
     },
     {
@@ -143,9 +142,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bk/0sfrfl4n3nl9319cdqyxqb740000gn/T/ipykernel_37523/1732914937.py:8: DtypeWarning: Columns (7,8,9,10,11,12,14,19,20,21,25,37) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  data = pd.read_csv(filepath)\n",
-      " 20%|██        | 2/10 [00:02<00:10,  1.36s/it]"
+      " 20%|██        | 2/10 [00:03<00:13,  1.66s/it]"
      ]
     },
     {
@@ -159,9 +156,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bk/0sfrfl4n3nl9319cdqyxqb740000gn/T/ipykernel_37523/1732914937.py:8: DtypeWarning: Columns (7,8,9,10,11,12,14,19,20,21,25,37) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  data = pd.read_csv(filepath)\n",
-      " 30%|███       | 3/10 [00:04<00:09,  1.38s/it]"
+      " 30%|███       | 3/10 [00:05<00:14,  2.02s/it]"
      ]
     },
     {
@@ -175,9 +170,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bk/0sfrfl4n3nl9319cdqyxqb740000gn/T/ipykernel_37523/1732914937.py:8: DtypeWarning: Columns (7,8,9,10,11,12,14,19,20,21,25,37) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  data = pd.read_csv(filepath)\n",
-      " 40%|████      | 4/10 [00:05<00:08,  1.47s/it]"
+      " 40%|████      | 4/10 [00:09<00:15,  2.54s/it]"
      ]
     },
     {
@@ -191,9 +184,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bk/0sfrfl4n3nl9319cdqyxqb740000gn/T/ipykernel_37523/1732914937.py:8: DtypeWarning: Columns (7,8,9,10,11,12,14,19,20,21,25,37) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  data = pd.read_csv(filepath)\n",
-      " 50%|█████     | 5/10 [00:08<00:08,  1.74s/it]"
+      " 50%|█████     | 5/10 [00:12<00:13,  2.72s/it]"
      ]
     },
     {
@@ -207,9 +198,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bk/0sfrfl4n3nl9319cdqyxqb740000gn/T/ipykernel_37523/1732914937.py:8: DtypeWarning: Columns (7,8,9,10,11,12,14,19,20,21,25,29,37,39) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  data = pd.read_csv(filepath)\n",
-      " 60%|██████    | 6/10 [00:11<00:09,  2.46s/it]"
+      " 60%|██████    | 6/10 [00:17<00:14,  3.59s/it]"
      ]
     },
     {
@@ -223,9 +212,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bk/0sfrfl4n3nl9319cdqyxqb740000gn/T/ipykernel_37523/1732914937.py:8: DtypeWarning: Columns (7,8,9,10,11,12,14,19,20,21,25,29,37,39) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  data = pd.read_csv(filepath)\n",
-      " 70%|███████   | 7/10 [00:17<00:10,  3.57s/it]"
+      " 70%|███████   | 7/10 [00:23<00:13,  4.47s/it]"
      ]
     },
     {
@@ -239,9 +226,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bk/0sfrfl4n3nl9319cdqyxqb740000gn/T/ipykernel_37523/1732914937.py:8: DtypeWarning: Columns (7,8,9,10,11,12,14,19,20,25,29,37,39) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  data = pd.read_csv(filepath)\n",
-      " 80%|████████  | 8/10 [00:25<00:09,  4.78s/it]"
+      "/tmp/ipykernel_5630/3593496385.py:22: DtypeWarning: Columns (11,12,25,29,39) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  sample_data = pd.read_csv(filepath, skiprows=skiprows)\n",
+      " 80%|████████  | 8/10 [00:31<00:10,  5.41s/it]"
      ]
     },
     {
@@ -255,9 +242,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bk/0sfrfl4n3nl9319cdqyxqb740000gn/T/ipykernel_37523/1732914937.py:8: DtypeWarning: Columns (7,8,9,10,11,12,14,19,20,25,29,37,39) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  data = pd.read_csv(filepath)\n",
-      " 90%|█████████ | 9/10 [00:39<00:07,  7.69s/it]"
+      " 90%|█████████ | 9/10 [00:44<00:08,  8.02s/it]"
      ]
     },
     {
@@ -271,24 +256,69 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bk/0sfrfl4n3nl9319cdqyxqb740000gn/T/ipykernel_37523/1732914937.py:8: DtypeWarning: Columns (7,8,9,10,11,12,14,19,20,25,29,37,39,43) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  data = pd.read_csv(filepath)\n",
-      "100%|██████████| 10/10 [01:16<00:00,  7.68s/it]\n"
+      "/tmp/ipykernel_5630/3593496385.py:22: DtypeWarning: Columns (37,39,43) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  sample_data = pd.read_csv(filepath, skiprows=skiprows)\n",
+      "100%|██████████| 10/10 [01:15<00:00,  7.58s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sampling completed and saved to 'sample_contributions.csv'.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "# Take a 1% sample of the data and save it to a new file for EDA\n",
     "sample_size = 0.01\n",
-    "sample_data = pd.DataFrame()\n",
+    "output_file_path = os.path.join(DATA_DIR, 'sample_contributions.csv')\n",
+    "\n",
+    "# Determine whether to write the header; initially, True\n",
+    "write_header = True\n",
+    "\n",
     "for year in tqdm(links.keys()):\n",
     "    filename = f'{year}_contributions.csv'\n",
     "    filepath = os.path.join(DATA_DIR, filename)\n",
     "    print(f'Loading {filename}...')\n",
-    "    data = pd.read_csv(filepath)\n",
-    "    sample_data = pd.concat([sample_data, data.sample(frac=sample_size)])\n",
     "\n",
-    "sample_data.to_csv(os.path.join(DATA_DIR, 'sample_contributions.csv'), index=False)"
+    "    # First, determine the number of rows in the file (excluding header)\n",
+    "    total_rows = sum(1 for row in open(filepath, 'r', encoding='utf-8')) - 1\n",
+    "\n",
+    "    # Calculate the number of rows to sample\n",
+    "    sample_rows = int(total_rows * sample_size)\n",
+    "\n",
+    "    # Generate random row indices to skip\n",
+    "    skiprows = sorted(np.random.choice(np.arange(1, total_rows+1), size=(total_rows-sample_rows), replace=False))\n",
+    "    \n",
+    "    # Use skiprows in read_csv to load the random sample directly\n",
+    "    sample_data = pd.read_csv(filepath, skiprows=skiprows)\n",
+    "\n",
+    "    # Append the sample to the output file. Use header only for the first file\n",
+    "    sample_data.to_csv(output_file_path, mode='a', index=False, header=write_header)\n",
+    "    \n",
+    "    # After the first write, disable header for subsequent writes\n",
+    "    write_header = False\n",
+    "\n",
+    "print(\"Sampling completed and saved to 'sample_contributions.csv'.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following issues arose when processing data: \n",
+    "`DtypeWarning: Columns (11,12,25,29,39) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+    "  sample_data = pd.read_csv(filepath, skiprows=skiprows)`\n",
+    "\n",
+    "`DtypeWarning: Columns (37,39,43) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+    "  sample_data = pd.read_csv(filepath, skiprows=skiprows)`\n"
    ]
   }
  ],
@@ -308,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
