Added scaled amount col to reduce rmse

--- a/src/baseline.ipynb
+++ b/src/baseline.ipynb
@@ -13,8 +13,16 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
+    "import numpy as np\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Baseline model for first-time donors"
    ]
   },
   {
@@ -23,7 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(os.path.join(DATA_DIR, 'sample_contributions.csv'))"
+    "df_all_donors = pd.read_csv(os.path.join(DATA_DIR, 'sample_contributions.csv'))\n",
+    "df = df_all_donors[df_all_donors['Repeat_Donor'] != True]"
    ]
   },
   {
@@ -40,14 +49,15 @@
    "outputs": [],
    "source": [
     "def simple_preprocessing(df):\n",
-    "    df = df[['amount', 'date', 'contributor.cfscore', 'candidate.cfscore']].copy()\n",
+    "    scale_factor = df['amount'].astype(np.float64).max() \n",
+    "    df = df[['scaled_amount', 'date', 'contributor.cfscore', 'candidate.cfscore']].copy()\n",
     "    df['date'] = pd.to_datetime(df['date'], errors='coerce')\n",
     "    \n",
     "    df['contributor.cfscore'].fillna(df['contributor.cfscore'].mean(), inplace=True)\n",
     "    df['candidate.cfscore'].fillna(df['candidate.cfscore'].mean(), inplace=True)\n",
     "\n",
-    "    cap_threshold = 5000\n",
-    "    df['amount_capped'] = df['amount'].apply(lambda x: min(x, cap_threshold))\n",
+    "    cap_threshold = 5000.0/scale_factor\n",
+    "    df['amount_capped'] = df['scaled_amount'].apply(lambda x: min(x, cap_threshold))\n",
     "    \n",
     "    df['year'] = df['date'].dt.year\n",
     "    df['month'] = df['date'].dt.month\n",
@@ -74,7 +84,7 @@
     {
      "data": {
       "text/plain": [
-       "12644.425208513268"
+       "0.003068870609757294"
       ]
      },
      "execution_count": 5,
@@ -84,7 +94,7 @@
    ],
    "source": [
     "X = df[['contributor.cfscore', 'candidate.cfscore', 'year', 'month']]\n",
-    "y = df['amount']\n",
+    "y = df['amount_capped']\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
@@ -112,7 +122,7 @@
     {
      "data": {
       "text/plain": [
-       "(12805.686421222867, 12549.300101485316)"
+       "(0.0031273299990147146, 0.0029621480220392254)"
       ]
      },
      "execution_count": 6,
@@ -158,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
