Add inflation adjustment + more preprocessing

--- a/src/baseline.ipynb
+++ b/src/baseline.ipynb
@@ -12,15 +12,11 @@
     "\n",
     "# 2. EDA Review\n",
     "\n",
-    "Not all donors have the same donation habits. According to the EDA, about 7.9% of total donations come from individuals who donated multiple times; the vast majority only ever make a single political contribution.\n",
+    "Not all donors have the same donation habits. According to our EDA, about 36% of total donations come from individuals who donated multiple times.\n",
     "\n",
     "Donations tend to spike at regular intervals during election cycles, ie. right before presidential elections. \n",
-    "<img src='electioncycles.png'>\n",
     "\n",
-    "Highly partisal donors (high or low CF scores) tend to donate more frequently. \n",
-    "<img src='2024-04-10-191628_677x368_scrot.png'>\n",
-    "\n",
-    "Almost all donations for individual donors are under $5000. However, a small number of donations are up to 40 times that amount. We scaled our data by a factor of 5000, as we will only be considering small-dollar donors for this baseline analysis. For now, we are assuming that political campaigns are already familiar with most politically engaged, high net worth individuals.\n"
+    "Highly partisal donors (high or low CF scores) tend to donate more frequently."
    ]
   },
   {
@@ -43,26 +39,30 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import warnings\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "from config import DATA_DIR\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import GradientBoostingRegressor, RandomForestRegressor\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import warnings\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "from config import DATA_DIR\n",
+    "\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_all_donors = pd.read_csv(os.path.join(DATA_DIR, 'sample_contributions.csv'))\n",
-    "df = df_all_donors[df_all_donors['Repeat_Donor'] != True]"
+    "df = pd.read_csv(os.path.join(DATA_DIR, 'sample_contributions_processed.csv'))\n",
+    "df_one_time = df[df['repeat_donor'] == False]\n",
+    "df_repeat = df[df['repeat_donor'] == True]"
    ]
   },
   {
@@ -105,7 +105,7 @@
     }
    ],
    "source": [
-    "df = simple_preprocessing(df)"
+    "df_one_time = simple_preprocessing(df_one_time)"
    ]
   },
   {
@@ -133,8 +133,8 @@
     }
    ],
    "source": [
-    "X = df[['contributor.cfscore', 'candidate.cfscore', 'year', 'month']]\n",
-    "y = df['amount_capped']\n",
+    "X = df_one_time[['contributor.cfscore', 'candidate.cfscore', 'year', 'month']]\n",
+    "y = df_one_time['amount_capped']\n",
     "\n",
     "print(\"Scaled Amount standard deviation:\", np.std(y))\n",
     "print(\"Scaled Amount mean:\", np.mean(y))\n",
