removed unneccessary text

--- a/submission/preprocess_and_RNN.ipynb
+++ b/submission/preprocess_and_RNN.ipynb
@@ -19,7 +19,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -140,7 +140,7 @@
         "id": "OezQ0uXfJTv2",
         "outputId": "a39e2f0f-91a5-43cd-cced-8a1bd1049b04"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -713,7 +713,7 @@
         "id": "qVyjf9GgkDZ_",
         "outputId": "ab32a93f-c824-4f16-9037-0fc6ec4095b7"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1233,7 +1233,7 @@
         "id": "8fT8MtOOkR-k",
         "outputId": "28fcc936-05aa-421b-8a5f-f3bcd6221ae5"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1827,7 +1827,7 @@
         "id": "bPmWDml3d95c",
         "outputId": "c5ad09e6-c240-430e-d3fe-00dd81871c3d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2399,9 +2399,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "I believe the train, val, and test shapes are wrong. They are 2 dimensional, which doesn't make sense, given that we had a 2D dataframe of identically sized arrays, so there should be 3 dimensions total. And I don't understand how we would make the RNN use the correct array index as the time step."
-      ],
+      "source": [],
       "metadata": {
         "id": "8VagPUwJ-Os5"
       }
@@ -2434,7 +2432,7 @@
         },
         "outputId": "423a83b8-d876-4a55-e88b-3f9a0cab286d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2449,6 +2447,18 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Flattening\n",
+        "- Defines a function to flatten multi-dimensional data samples into 1D arrays.\n",
+        "- Uses the function on both PCA-transformed and original datasets for training, validation, and test splits.\n",
+        "- Converts target arrays (`y_pca_*` and `y_*`) to float for all datasets."
+      ],
+      "metadata": {
+        "id": "aC5g18DRxPn9"
+      }
     },
     {
       "cell_type": "code",
@@ -2482,7 +2492,7 @@
         },
         "outputId": "c48432ee-9503-4efd-e8bf-066cb118b2bf"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2532,6 +2542,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Preparing the Dataset\n",
+        "- Reshapes the flattened feature arrays to include a single time step, preparing them for RNN input.\n",
+        "- Converts arrays into TensorFlow datasets for efficient training, validation, and testing.\n",
+        "- Implements batching and prefetching for the datasets to optimize loading.\n",
+        "- Repeats the reshaping and dataset creation for PCA-transformed data."
+      ],
+      "metadata": {
+        "id": "5lg3I3BtxaNR"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import tensorflow as tf\n",
@@ -2575,7 +2598,7 @@
         "id": "tq0kOiDXW5jI",
         "outputId": "bfcc8c67-505c-45d1-f1d5-336ccafccf40"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2629,7 +2652,7 @@
         "id": "QfsG_ohRZL6N",
         "outputId": "f61f7b68-c36e-49b3-9dd2-148dd94df191"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2671,6 +2694,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Model Training\n",
+        "- Adjusts the learning rate based on validation loss, reducing it by 50% after 5 epochs with no improvement.\n",
+        "- Monitors validation accuracy to stop training early if no improvement occurs after 5 epochs, restoring the best weights."
+      ],
+      "metadata": {
+        "id": "5QvFkIs5yCCe"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "lr_reduction = ReduceLROnPlateau(monitor='val_loss', patience=5, verbose=1, factor=0.5, min_lr=0.00001)\n",
@@ -2693,7 +2727,7 @@
         },
         "outputId": "4a9f601a-b939-4857-fc14-7a24f47fdf3a"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2766,7 +2800,7 @@
         "id": "bKY0vStghhOC",
         "outputId": "2f3642ef-c3d6-40eb-f518-2af8b55a96d8"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2793,7 +2827,7 @@
         "id": "U-_8__GISTL6",
         "outputId": "a888df66-4808-4fb2-a36a-470750a5a181"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2835,7 +2869,7 @@
         "id": "1Yw9sWOLW6rK",
         "outputId": "9986ae86-181f-400b-e7f4-4915710ddc8e"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
